--- a/adaptis-master/src/views/components/relative_block/relative_block.pug
+++ b/adaptis-master/src/views/components/relative_block/relative_block.pug
@@ -3,7 +3,7 @@ section.relative_block
         .content
             .row
                 .col-sm-4.col-xs-12
-                    .content-details
+                    .content-details.wow.fadeInUp(data-wow-duration="0.5s" data-wow-delay="0.5s")
                         .image.image-1
                             a(href="#")
                                 p.special DOWNLOAD NOW!
@@ -12,7 +12,7 @@ section.relative_block
                         p.text Register now to download our credentials in PDF format. The selected projects will provide a range of our experience in delivering global solutions.
                         a.link(href="#") SEND TO ME
                 .col-sm-4.col-xs-12
-                    .content-details
+                    .content-details.wow.fadeInUp(data-wow-duration="0.5s" data-wow-delay="1s")
                         .image.image-2
                             a.room(href="#")
                                 p WORK WITH THE BEST!
@@ -21,7 +21,7 @@ section.relative_block
                         p.text Collaborate with other passionate people, like yourself, who enthusiastically seek out new challenges and continuous learning to create bigger, better and bolder experiences.
                         a.link(href="#") APPLY NOW
                 .col-sm-4.col-xs-12
-                    .content-details
+                    .content-details.wow.fadeInUp(data-wow-duration="0.5s" data-wow-delay="1.5s")
                         .image.image-3
                             a.room(href="#")
                                 p GET IN TOUCH!
