--- a/adaptis-master/src/views/components/solution/solution.pug
+++ b/adaptis-master/src/views/components/solution/solution.pug
@@ -11,18 +11,18 @@ section.solution-section
         .solution-items
             .row
                 .col-xs-12.col-sm-4
-                    .items-inner.items-inner-1
+                    .items-inner.items-inner-1.wow.fadeInUp(data-wow-duration="0.5s" data-wow-delay="0.5s")
                         p User Experience 
                         p Design
                         .text
                             p UX
                             P UI
                 .col-xs-12.col-sm-4
-                    .items-inner.items-inner-2
+                    .items-inner.items-inner-2.wow.fadeInUp(data-wow-duration="0.5s" data-wow-delay="1s")
                         p Development 
                         p & Delivery
                 .col-xs-12.col-sm-4
-                    .items-inner.items-inner-3
+                    .items-inner.items-inner-3.wow.fadeInUp(data-wow-duration="0.5s" data-wow-delay="1.5s")
                         p Agency
                         p Partnership
         .solution-title
