--- a/renovation/src/views/components/services/services.pug
+++ b/renovation/src/views/components/services/services.pug
@@ -1,5 +1,5 @@
 section.services_area
-    .container
+    .container-fluid
         .row.grid_services_area
             .col-lg-6.col-sm-6.col-12
                 .services_item
