--- a/renovation/src/views/layouts/master.pug
+++ b/renovation/src/views/layouts/master.pug
@@ -54,7 +54,7 @@ html(lang='jp')
     //- block content
     block content
 
-    include ../components/services/services
+    //- include ../components/services/services
 
     //- include ../components/portfolio/portfolio.pug
 
