--- a/renovation/src/views/components/header/header.pug
+++ b/renovation/src/views/components/header/header.pug
@@ -30,7 +30,7 @@ header
                                     a(href="testimonials")
                                         span services
                                 li
-                                    a(href="#")
+                                    a(href="portfolio")
                                         span portfolio
             .wrap_grid_menu_right.end-lg
                 .grid_menu_right
