--- a/renovation/src/views/components/portfolio/portfolio.pug
+++ b/renovation/src/views/components/portfolio/portfolio.pug
@@ -1,17 +1,23 @@
+.banner
+  .container_banner
+      .wrap-title
+          .title PORTFOLIO
+          br
+          .content WE ARE A TEAM OF HIGHLY SKILLED PROFESSIONALS
 section.portfolio_area
   .container-fluid
     .portfolio_filter
       ul.list_style
         li.active(data-filter='*')
-          a(href='#') All
+          a All
         li(data-filter='.commercial')
-          a(href='#') Commercial
+          a Commercial
         li(data-filter='.landscaping')
-          a(href='#') Landscaping
+          a Landscaping
         li(data-filter='.newconstruction')
-          a(href='#') New Construction
+          a New Construction
         li(data-filter='.residential')
-          a(href='#') Residential
+          a Residential
     .row.grid_portfolio_area
       .col-lg-4.col-sm-6.col-12.commercial.landscaping
         .portfolio_item
@@ -20,7 +26,7 @@ section.portfolio_area
             a.light
               img.img-fluid(src='../../../assets/images/Smith-residence.jpg' alt='')
           .portfolio_text
-            a(href='#')
+            a(href='')
               h4 Smith Residence
               .view View Project
       .col-lg-4.col-sm-6.col-12.landscaping.residential
@@ -30,7 +36,7 @@ section.portfolio_area
             a.light
               img.img-fluid(src='../../../assets/images/portfolio-4.jpg' alt='')
           .portfolio_text
-            a(href='#')
+            a(href='')
               h4 Smith Residence
               .view View Project
       .col-lg-4.col-sm-6.col-12.commercial.residential
@@ -40,7 +46,7 @@ section.portfolio_area
             a.light
               img.img-fluid(src='../../../assets/images/portfolio-7.jpg' alt='')
           .portfolio_text
-            a(href='#')
+            a(href='')
               h4 Smith Residence
               .view View Project
       .col-lg-4.col-sm-6.col-12.commercial.residential
@@ -50,7 +56,7 @@ section.portfolio_area
             a.light
               img.img-fluid(src='../../../assets/images/portfolio-4.jpg' alt='')
           .portfolio_text
-            a(href='#')
+            a(href='')
               h4 Outdoor Pergola
               .view View Project
       .col-lg-4.col-sm-6.col-12.landscaping.newconstruction
@@ -60,7 +66,7 @@ section.portfolio_area
             a.light
               img.img-fluid(src='../../../assets/images/portoflio-5.jpg' alt='')
           .portfolio_text
-            a(href='#')
+            a(href='')
               h4 Smith Residence
               .view View Project
       .col-lg-4.col-sm-6.col-12.newconstruction.residential
@@ -70,7 +76,7 @@ section.portfolio_area
             a.light
               img.img-fluid(src='../../../assets/images/Brown-Residence.jpg' alt='')
           .portfolio_text
-            a(href='#')
+            a(href='')
               h4 Smith Residence
               .view View Project
       .col-lg-4.col-sm-6.col-12.landscaping
@@ -80,7 +86,7 @@ section.portfolio_area
             a.light
               img.img-fluid(src='../../../assets/images/Brown-Residence.jpg' alt='')
           .portfolio_text
-            a(href='#')
+            a(href='')
               h4 Outdoor Pergola
               .view View Project
       .col-lg-4.col-sm-6.col-12.newconstruction
@@ -90,7 +96,7 @@ section.portfolio_area
             a.light
               img.img-fluid(src='../../../assets/images/Smith-residence.jpg' alt='')
           .portfolio_text
-            a(href='#')
+            a(href='')
               h4 Smith Residence
               .view View Project
       .col-lg-4.col-sm-6.col-12.residential
@@ -100,6 +106,6 @@ section.portfolio_area
             a.light
               img.img-fluid(src='../../../assets/images/landscaping-1.jpg' alt='')
           .portfolio_text
-            a(href='#')
+            a(href='')
               h4 Outdoor Pergola
               .view View Project
