--- a/renovation/src/views/components/portfolio/portfolio.scss
+++ b/renovation/src/views/components/portfolio/portfolio.scss
@@ -75,7 +75,7 @@
                 color: #3e606b;
                 font-family: fonts(pTSansNarrow);
                 // font-style: italic;
-                font-weight: bold;
+                // font-weight: bold;
                 position: relative;
                 display: inline-block;
                 cursor: pointer;
