--- a/Nhom4_Kempinki/src/views/layouts/master.pug
+++ b/Nhom4_Kempinki/src/views/layouts/master.pug
@@ -45,7 +45,7 @@ html(lang='en')
 
   body
     //- header
-    include ../components/header/header.pug
+    //- include ../components/header/header.pug
 
     //- block content
     block content
