--- a/Nhom4_Kempinki/src/assets/styles/_app.scss
+++ b/Nhom4_Kempinki/src/assets/styles/_app.scss
@@ -19,6 +19,8 @@
 // Component
 @import '../../views/components/homepage/explore/explore';
 @import '../../views/components/header/header';
+@import '../../views/components/gallerypage/showus/showus';
+@import '../../views/components/gallerypage/olapic-wall/olapic-wall';
 @import '../../views/components/homepage/introducePage/introduce';
 @import '../../views/components/homepage/mapbox/mapbox';
 @import '../../views/components/footer/footer';
