--- a/Nhom4_Kempinki/src/views/components/footer/footer.pug
+++ b/Nhom4_Kempinki/src/views/components/footer/footer.pug
@@ -42,7 +42,7 @@ footer
                         .aboutus
                             .row
                                 .col-xs-12.col-md-6.col-sm-6
-                                    ul
+                                    ul.first
                                         li
                                             a(href="#") ABOUT US
                                         li
@@ -66,9 +66,11 @@ footer
                     .col-xs-12.col-sm-5
                         h3 SIGN UP TO OUR NEWSLETTER
                         .signup
-                            a(href="#").subcribe SUBCRIBE
-                            a(href="#")
-                                img(src="https://awscloudfront.kempinski.com/images/icon/global-hotel.png", alt="")
+                            .subcribe 
+                                a(href="#") SUBCRIBE
+                            .image
+                                a(href="#")
+                                    img(src="https://awscloudfront.kempinski.com/images/icon/global-hotel.png", alt="")
                             p © 2019 Kempinski Hotels
             
     .footer-backtoptop
