--- a/leaterup-master/src/assets/styles/base/_global.scss
+++ b/leaterup-master/src/assets/styles/base/_global.scss
@@ -11,11 +11,13 @@
 html {
     font-size: $fz-root; // root font-size, DO NOT CHANGE
 }
+/////////// editt
 .leatherwidth{
     width: 1180px;
     margin: 0 auto;
     padding: 0 30px;
 }
+
 body {
     font-size: 1.6rem;
     font-weight: fontWeight(regular);
