--- a/leaterup-master/src/views/pages/chapsdetail.pug
+++ b/leaterup-master/src/views/pages/chapsdetail.pug
@@ -1,9 +1,8 @@
 extends ../layouts/master.pug
 
 block title
-  title My Page - Index
+  title Chaps Detail - Index
 
 block content
-    h1 Hello
     include ../components/chapscomponent/chaps/chap.pug
     
