--- a/leaterup-master/src/views/pages/testt2.pug
+++ b/leaterup-master/src/views/pages/testt2.pug
@@ -1,9 +1,9 @@
 extends ../layouts/master.pug
 
 block title
-  title My Page - Index
+  title testt2 - Index
 
-block content
-    h1 Hello
+block content 
+    h1 Helloxdgdsgdsdsgdsg sss
     include ../components/chapscomponent/chaps/chap.pug
     
