--- a/leaterup-master/src/assets/styles/_app.scss
+++ b/leaterup-master/src/assets/styles/_app.scss
@@ -13,3 +13,4 @@
 // Component
 @import '../../views/components/header/header';
 @import '../../views/components/footer/footer';
+@import '../../views/components/chapsComponent/chaps/chap';
