--- a/leaterup-master/src/views/components/footer/footer.pug
+++ b/leaterup-master/src/views/components/footer/footer.pug
@@ -1,2 +1,85 @@
 footer
-   
+    div.leatherwidth
+        div.footergrid
+            div.linkgrid
+                ul
+                    li.title About Us
+                    li
+                        a(href="") About Leatherup
+                    li
+                        a(href="") Leatherup Canada
+                    li
+                        a(href="") MyLeather Wholesale
+                    li
+                        a(href="") Privacy Policy
+                    li
+                        a(href="") Terms & Conditions
+                ul
+                    li.title Customer Service
+                    li
+                        a(href="") FAQ
+                    li
+                        a(href="") Contact Us
+                    li
+                        a(href="") Return & Exchange
+                    li
+                        a(href="") Shipping & Handling
+                    li
+                        a(href="") Order Tracking
+                    li
+                        a(href="") Sizing Charts
+                ul
+                    li.title Need Help?
+                    li
+                        a(href="") Call 800-846-6010
+                    li
+                        a(href="") Email Us
+                    
+            div.mediagrid
+                div.emailgrid
+                    h4 Sign up for special offers & Deals from Leatherup
+                    form(action="POST")
+                        input(type="text" placeholder="Your Email address")
+                        button SIGN UP
+                div.socialgrid
+                    div.payment
+                        h4 Secure Online Purchases
+                        ul
+                            li
+                                img(src="//cdn.shopify.com/s/files/1/2694/4876/t/96/assets/payment-credit-cards.png?11062", alt="")
+                            li
+                                a(href="") 
+                                    img(src="//www.securitymetrics.com/images/sm_tested4.gif", alt="")
+                                a(href="")                              
+                                    img(src="//seals.resellerratings.com/seal.php?seller=14185", alt="")
+                    div.social
+                        h4 Stay connected
+                        ul
+                            li
+                                a(href="")
+                                    svg.icon.icon-facebook(aria-hidden='true', focusable='false', role='presentation', viewbox='0 0 46.5 46.5')
+                                        path(d='M25.45 16.65h2.2v-3.4h-3a3.83 3.83 0 0 0-4.1 4.1v2.3h-2v3.5h2v9.9h4.1v-9.9h2.8l.2-3.5h-3.1v-2.1a.83.83 0 0 1 .9-.9z')
+                                        path(d='M23.25 0L0 23.25 23.25 46.5 46.5 23.25zM1.41 23.25L23.25 1.41l21.84 21.84-21.84 21.84z')
+                            li
+                                a(href="")
+                                    svg.icon.icon-twitter(aria-hidden='true', focusable='false', role='presentation', viewbox='0 0 46.5 46.5')
+                                        path(d='M31 18.55a3.89 3.89 0 0 0 1.8-2.2 8.25 8.25 0 0 1-2.6 1 3.77 3.77 0 0 0-2.9-1.3 4 4 0 0 0-4 4 3.4 3.4 0 0 0 .1 1 11.79 11.79 0 0 1-8.3-4.2 4.55 4.55 0 0 0-.5 2 4 4 0 0 0 1.8 3.4 3.74 3.74 0 0 1-1.8-.5v.1a4.09 4.09 0 0 0 3.2 4 4.1 4.1 0 0 1-1.1.1c-.3 0-.6-.1-.8-.1a4 4 0 0 0 3.8 2.8 8 8 0 0 1-5 1.7c-.4 0-.7-.1-1-.1a11.84 11.84 0 0 0 6.2 1.8 11.47 11.47 0 0 0 11.5-11.5v-.5a7.56 7.56 0 0 0 1.9-2.1 8.65 8.65 0 0 1-2.3.6z')
+                                        path(d='M23.25 0L0 23.25 23.25 46.5 46.5 23.25zM1.41 23.25L23.25 1.41l21.84 21.84-21.84 21.84z')                            
+                            li
+                                a(href="")
+                                    svg.icon.icon-instagram(aria-hidden='true', focusable='false', role='presentation', viewbox='0 0 46.5 46.5')
+                                        path(d='M32.25 19.65a4.79 4.79 0 0 0-4.5-5 38 38 0 0 0-4.5-.1h-3.9a5 5 0 0 0-5.1 5.1v7.8a5 5 0 0 0 5.1 5.1q3.9.15 7.8 0a4.91 4.91 0 0 0 5.1-5c.1-2.7.1-5.3 0-7.9zm-1.5 3.9c-.1 1.5 0 3-.2 4.4a3.08 3.08 0 0 1-3.3 3c-2.7.1-5.3.1-8 0a3.25 3.25 0 0 1-3.4-3.4c-.1-2.7-.1-5.3 0-8a3.25 3.25 0 0 1 3.4-3.4c2.7-.1 5.3-.1 8 0a3.34 3.34 0 0 1 3.4 3.5 8.6 8.6 0 0 1 .1 1.6z')
+                                        path(d='M23.25 18.75a4.7 4.7 0 1 0 0 9.4 4.49 4.49 0 0 0 4.6-4.7 4.61 4.61 0 0 0-4.6-4.7zm.1 7.7a3 3 0 0 1-3.1-3 3 3 0 0 1 3-3 3.15 3.15 0 0 1 3.1 2.9 3 3 0 0 1-3 3.1zM28.15 17.55a1.1 1.1 0 1 0 0 2.2 1.18 1.18 0 0 0 1.1-1.1 1.11 1.11 0 0 0-1.1-1.1z')
+                                        path(d='M23.25 0L0 23.25 23.25 46.5 46.5 23.25zM1.41 23.25L23.25 1.41l21.84 21.84-21.84 21.84z')
+                            li
+                                a(href="")
+                                    svg.icon.icon-youtube(aria-hidden='true', focusable='false', role='presentation', viewbox='0 0 46.5 46.5')
+                                        path(d='M30.35 16.45h-14a2.8 2.8 0 0 0-2.8 2.8v7.9a2.8 2.8 0 0 0 2.8 2.8h13.9a2.8 2.8 0 0 0 2.8-2.8v-.1h.1v-7.8a2.8 2.8 0 0 0-2.8-2.8zm-9.1 9.2v-5.5l5.2 2.8z')
+                                        path(d='M23.25 0L0 23.25 23.25 46.5 46.5 23.25zM1.41 23.25L23.25 1.41l21.84 21.84-21.84 21.84z')
+
+
+    div.copyrightgrid
+        small
+            | © 2019, 
+            a LeatherUp.com
+            |  All Rights Reserved. Over 3.5 Million Satisfied Customers Since 1999
