--- a/adaptis-master/src/views/components/footer/footer.pug
+++ b/adaptis-master/src/views/components/footer/footer.pug
@@ -1,17 +1,17 @@
 footer
     div.footer-general
         div.container
-            div.logo 
+            div.logo.wow.fadeInDown(data-wow-duration="0.5s" data-wow-delay="0.3s")
                     a(href="homepage") ADAPTIS
             nav.footer-menu
                 ul
-                    li.item#the_work_1
+                    li.item#the_work_1.wow.fadeInDown(data-wow-duration="0.5s" data-wow-delay="0.5s")
                         a(href="the_work") THE WORK
-                    li.item#the_agency_1
+                    li.item#the_agency_1.wow.fadeInDown(data-wow-duration="0.5s" data-wow-delay="0.7s")
                         a(href="the_agency") THE AGENCY
-                    li.item
+                    li.item.wow.fadeInDown(data-wow-duration="0.5s" data-wow-delay="0.9s")
                         a(href="#") CAREERS
-                    li.item#contact_1
+                    li.item#contact_1.wow.fadeInDown(data-wow-duration="0.5s" data-wow-delay="1.1s")
                         a(href="contact") CONTACT US
             div.row 
                 div.col-xs-6.col-sm-3
